syntax = "proto3";

package protocol;

import "proto/common.proto";
import "proto/status.proto";

option go_package = "protocol;protocol";

// 登陆 (post)
message LoginReq
{
    string account = 2;
    string password = 3;
}
message LoginResp
{
    Status status = 1;
    string token = 2;
    UserInfo user = 3;  // 用户信息
}

message LogoutResp
{
    Status status = 1;
}